# ego

./: CMakeLists.txt  Model.pb.txt
cmake/: OpenBLASConfig.cmake  unittest.cmake
ego/: CMakeLists.txt
ego/acq/: CMakeLists.txt  acq.cpp  acq.h  acq_random.cpp  acq_random.h  ei.cpp  ei.h  expect_ret.cpp  expect_ret.h  lcb.cpp  lcb.h
ego/base/: CMakeLists.txt  base.h  config.proto  distribution.h  entities.h  entity.h  errors.h  factory.cpp  factory.h  la.cpp  la.h  opt.cpp  opt.h  value.h
ego/batch/: CMakeLists.txt  batch.cpp  batch.h  predictive.cpp  predictive.h  random.cpp  random.h
ego/contrib/: CMakeLists.txt  digamma.cpp  digamma.h
ego/contrib/cppoptlib/: meta.h
ego/contrib/cppoptlib/linesearch/: morethuente.h
ego/contrib/cppoptlib/solver/: lbfgsbsolver.h
ego/contrib/pbjson/: CMakeLists.txt  pbjson.h
ego/contrib/spdlog/: CMakeLists.txt
ego/contrib/spdlog/details/: CMakeLists.txt
ego/cov/: CMakeLists.txt  cov.cpp  cov.h  gaborard.cpp  gaborard.h  gaboriso.cpp  gaboriso.h  matern.cpp  matern.h  maternard.cpp  maternard.h  materniso.cpp  materniso.h  seard.cpp  seard.h  seiso.cpp  seiso.h  sq_exp_iso.cpp  sq_exp_iso.h  square_dist.cpp  square_dist.h  stationary.cpp  stationary.h  stationary_ard.cpp  stationary_ard.h  stationary_iso.cpp  stationary_iso.h  stationary_kernels.cpp  stationary_kernels.h
ego/distr/: CMakeLists.txt  distr.cpp  distr.h  gamma.cpp  gamma.h  gauss.cpp  gauss.h  student_t.cpp  student_t.h
ego/func/: CMakeLists.txt  derivative.h  functor.cpp  functor.h  one_arg.cpp  one_arg.h  two_arg.cpp  two_arg.h
ego/inf/: CMakeLists.txt  exact.cpp  exact.h  inf.cpp  inf.h  laplace.h
ego/inf/_old/: exact.cpp  exact.h  laplace.cpp  laplace.h
ego/lik/: CMakeLists.txt  gamma.h  gauss.cpp  gauss.h  lik.cpp  lik.h  link_funcs.cpp  student_t.h
ego/lik/_old/: gamma.cpp  gauss.cpp  link_funcs.h  student_t.cpp
ego/mean/: CMakeLists.txt  comp_mean.cpp  const.cpp  const.h  linear.cpp  linear.h  mean.cpp  mean.h  sum.cpp  sum.h
ego/mean/_old/: comp_mean.h  const.h  mean.h  sum.cpp
ego/model/: CMakeLists.txt  base_model.cpp  base_model.h  config.h  model.cpp  model.h  tree_model.cpp  tree_model.h
ego/opt/: CMakeLists.txt  brent_min.cpp  brent_min.h  cg.cpp  cg.h  impl.cpp  impl.h  opt.cpp  opt.h
ego/problem/: CMakeLists.txt  config.h  problem.cpp  problem.h  problem_old.cpp  problem_old.h
ego/protos/: CMakeLists.txt  config.pb.cc  config.pb.h  config.proto  ego_options.proto  extension.pb.cc  extension.pb.h  extension.proto  la.proto  messages.proto  model.proto  problem.proto  problem_old.prt  server_opts.proto  solver.proto  spikes_list.proto  stat_gatherer.proto  strategy.proto  time_series.proto  time_series_info.proto
ego/solver/: CMakeLists.txt  config.h  solver.cpp  solver.h  solver_json.cpp  utils.cpp  utils.h
ego/strategy/: CMakeLists.txt  config.h  strategy.cpp  strategy.h  strategy_funcs.cpp  strategy_funcs.h
ego/util/: CMakeLists.txt  act_vector.h  any.cpp  any.h  fs.cpp  fs.h  json.cpp  json.h  maybe.h  minimize.cpp  minimize.h  optional.h  parse_parenthesis.cpp  parse_parenthesis.h  proto_options.cpp  proto_options.h  protobuf.cpp  protobuf.h  ptr.h  serial-inl.h  serial.cpp  serial.h  sobol.cpp  sobol.h  soboldata.h  stat_gatherer.cpp  stat_gatherer.h  string.cpp  string.h  tagged_tuple.h
ego/util/log/: CMakeLists.txt  log.cpp  log.h
ego/util/serial/: CMakeLists.txt  bin_serial.cpp  bin_serial.h  meta_proto_serial-inl.h  meta_proto_serial.cpp  meta_proto_serial.h  proto_serial-inl.h  proto_serial.cpp  proto_serial.h  serial_base.cpp  serial_base.h  util.cpp  util.h
ego/util/server/: CMakeLists.txt  http.cpp  http.h  response_builder.cpp  response_builder.h  server.h
ego/util/ts/: CMakeLists.txt  spikes_list.cpp  spikes_list.h  time_series.h  time_series_info.h
lib/: CMakeLists.txt
lib/base/: CMakeLists.txt
nlopt/: CMakeLists.txt
nlopt/api/: deprecated.c  nlopt-internal.h  nlopt.hpp
nlopt/auglag/: auglag.h
nlopt/bobyqa/: bobyqa.h
nlopt/cdirect/: cdirect.c  cdirect.h  hybrid.c
nlopt/cobyla/: cobyla.c  cobyla.h
nlopt/crs/: crs.h
nlopt/direct/: direct-internal.h
nlopt/esch/: esch.h
nlopt/isres/: isres.h
nlopt/luksan/: luksan.h
nlopt/mlsl/: mlsl.h
nlopt/mma/: ccsa_quadratic.c  mma.c  mma.h
nlopt/neldermead/: neldermead.h
nlopt/newuoa/: newuoa.c  newuoa.h
nlopt/praxis/: praxis.c  praxis.h
nlopt/slsqp/: slsqp.h
nlopt/stogo/: global.cc  global.h  stogo.h
nlopt/test/: testfuncs.c  testopt.cpp
nlopt/util/: mt19937ar.c  nlopt-util.h  qsort_r.c  redblack_test.c  rescale.c  sobolseq.c  stop.c  timer.c
python/: CMakeLists.txt  ego_wrapper.cxx  ego_wrapper.h  egopy.cxx  egopy.pxd  egopy.pyx  egopy_configs.pxd  egopy_configs.pyx
scripts/: derivs.R  egopy_test.py  poke.py  splines.R  test.R  testgpy.py
tests/: DebugSave.m  dnn.m  gpml_test.m  infExactTest.m  infExactTest.m~  sample.py  sqdist.max  testfuncs.m  testfuncs.py  x.csv  x_test.csv
tools/: CMakeLists.txt
tools/cppoptlib/examples/: CMakeLists.txt  linearregression.cpp  logisticregression.cpp  nonnegls.cpp  rosenbrock.cpp  rosenbrock_float.cpp
tools/cppoptlib/test/: CMakeLists.txt  benchmark.cpp
tools/ego/: CMakeLists.txt  main.cpp
tools/ego_cli/: CMakeLists.txt  ego-cli
tools/ego_server/: CMakeLists.txt  ego_server_main.cpp  ego_service.h  http.h  server.h
tools/ego_server/state/: .Problem.pb.txt.swp  Problem.pb.txt  Problem2.pb.txt  Stdp.pb.txt  TestProblem.pb.txt
tools/ego_server/static/: charts.html  create.html  ego-server  includes.html  index.html  index2.html  nav.html  not_found.html  problem.html
tools/ego_server/static/css/: .sb-admin.css.swp  sb-admin.css
tools/ego_server/static/js/: form.js  index.js  main_page.js  problem.js  toggler.js
tools/ego_server/static/js/backend/: ego.js  problem_list.js
tools/ego_test/: CMakeLists.txt  main.cpp  register.cpp  register.h  test_framework.cpp  test_framework.h  test_main.cpp  test_sobol.cpp  tests.cpp  tests.h  util_tests.cpp
